--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!---
 <!DOCTYPE html> 
 <html lang="en"> 
 
@@ -17,10 +19,7 @@
 </body> 
 
 </html>
-
-
-
-<!---
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,6 +28,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href = "styles.css">
+    <link rel="shortcut icon" href="#">
     <script src = "script.js" defer></script>
 </head>
 <body>
@@ -101,11 +101,10 @@
             </div>
         </div>
         <video id= "video" src = "assets/video.mp4"> 
-            <track kind = "captions" scrlang = "en" src = "assets/subtitles.vtt">
+            <!--<track kind = "captions" scrlang = "en" src = "assets/subtitles.vtt">-->
         </video>
     </div>
     <audio id="audio" controls style="display: none;"></audio>
     <a id="downloadLink" style="display: none;" download="output.wav">Download WAV</a>
 </body>
 </html>
--->
