can certain video and get audio.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 <body>
     <div class="video-container paused" data-volume-level = "high">
+        <video id="video"></video>
         <img class="thumbnail-img">
         <div class="video-control-ctn">
             <div class="timeline-ctn">
@@ -69,11 +70,6 @@
                     /
                     <div class="total-time"></div>
                 </div>
-                <button class="captions-btn">
-                    <svg viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M18,11H16.5V10.5H14.5V13.5H16.5V13H18V14A1,1 0 0,1 17,15H14A1,1 0 0,1 13,14V10A1,1 0 0,1 14,9H17A1,1 0 0,1 18,10M11,11H9.5V10.5H7.5V13.5H9.5V13H11V14A1,1 0 0,1 10,15H7A1,1 0 0,1 6,14V10A1,1 0 0,1 7,9H10A1,1 0 0,1 11,10M19,4H5C3.89,4 3,4.89 3,6V18A2,2 0 0,0 5,20H19A2,2 0 0,0 21,18V6C21,4.89 20.1,4 19,4Z" />
-                      </svg>
-                </button>
                 <div class="speed-container">
                     <button class="speed-btn">1.0</button>
                     <div class="dropdown-content">
@@ -106,10 +102,13 @@
                 </button>
             </div>
         </div>
-        <video id= "video" src = "assets/video.mp4"> 
+        <!--<video id= "video" src = "assets/video.mp4"> --->
             <!--<track kind = "captions" scrlang = "en" src = "assets/subtitles.vtt">-->
-        </video>
+        <!-- </video>        --->
     </div>
+    <input type="file"
+    id="videoInput"
+    accept="video/*"> 
     <audio id="audio" controls style="display: none;"></audio>
     <a id="downloadLink" style="display: none;" download="output.wav">Download WAV</a>
 </body>
